JSAI/error/src/test/resources/base/notjslibrary_a015.js

function f(x) {
  print("f");
  print(x);
  return x;
}

var t = 5;
var q = f(--t);   //should return 4.
print(q);


